# tooldex

./: .dockerignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: build_and_push.yml
assets/: style.css
data/: dewalt_angle_grinders.json  dewalt_circular_saws.json  dewalt_cut_out_tools.json  dewalt_drill_drivers.json  dewalt_finish_brad_nailers.json  dewalt_hammer_drills.json  dewalt_impact_drivers.json  dewalt_impact_wrenches.json  dewalt_miter_saws.json  dewalt_oscillating_multi_tools.json  dewalt_ratchets.json  dewalt_rotary_hammers.json  dewalt_table_saws.json  dewalt_vacuums.json
dewalt/: __init__.py  data.py  scrape.py
dewalt/tool_families/: __init__.py  base.py
dewalt/tool_families/angle_grinders/: __init__.py  config.py  formatting.py  grids.py
dewalt/tool_families/circular_saws/: __init__.py  config.py  formatting.py  grids.py  scrape.py
dewalt/tool_families/cut_out_tools/: __init__.py  config.py  formatting.py  grids.py  scrape.py
dewalt/tool_families/drill_drivers/: __init__.py  config.py  formatting.py  grids.py  scrape.py
dewalt/tool_families/finish_brad_nailers/: __init__.py  config.py  formatting.py  grids.py  scrape.py
dewalt/tool_families/hammer_drills/: __init__.py  config.py  formatting.py  grids.py  scrape.py
dewalt/tool_families/impact_drivers/: __init__.py  config.py  formatting.py  grids.py  scrape.py
dewalt/tool_families/impact_wrenches/: __init__.py  config.py  grids.py  (+2 more)
dewalt/ui/: __init__.py  callbacks.py  config.py  context.py  formatting.py  grid_helpers.py  grids.py  layout.py  modal.py
(+30 files in other folders)
